added running instructions to the solutions html

--- a/links-to-solutions.html
+++ b/links-to-solutions.html
@@ -9,7 +9,20 @@
 
 <body>
     <h1>Reliability on top of UDP</h1>
-    <h2>Virtual Socket</h2>
+
+    <p>The links in this document point to Github commits that contain the solutions to the tasks.</p>
+
+    <h2>How to run the solutions</h2>
+
+    <p>To run the solutions you need to have the <a href="https://www.rust-lang.org/tools/install" target="_blank">Rust toolchain</a> installed.
+
+    <p>To start the server, run:</p>
+    <code>cargo run --bin server</code>
+
+    <p>To start the client, run:</p>
+    <code>cargo run --bin client</code>
+
+    <h3>Virtual Socket</h3>
     <ol>
         <li><a href="#" target="_blank">Placeholder</a></li>
     </ol>
