--- a/links-to-solutions.html
+++ b/links-to-solutions.html
@@ -25,7 +25,8 @@
 
     <h2>Solutions</h2>
 
-    <p>There are two links in front of each task description. The <i>examine</i> link points to the Github commit containing the solution. The <i>download</i> link points to the release page of the solution.</p>
+    <p>There are two links in front of each task description. The <i>examine</i> link points to the Github commit
+        containing the solution. The <i>download</i> link points to the release page of the solution.</p>
 
     <h3>Virtual Socket</h3>
     <ol>
@@ -35,6 +36,11 @@
             screen. It
             is enough for the application to send data only in one direction (and later acknowledgements in the
             other). Use the test application to test what you implement later.</li>
+
+        <li><a href="https://github.com/hannesi/udp-rdt/tree/virtual-socket-2" target="_blank">[Examine]</a> <a
+                href="https://github.com/hannesi/udp-rdt/releases/tag/virtual-socket-2" target="_blank">[Download]</a>
+            (2p) Make a virtual socket that randomly drops a packet (i.e. does not pass it to UDP socket or to the
+            application)</li>
     </ol>
 </body>
 
