--- a/links-to-solutions.html
+++ b/links-to-solutions.html
@@ -26,7 +26,7 @@
     <h2>Solutions</h2>
 
     <p>There are two links in front of each task description. The <i>examine</i> link points to the Github commit
-        containing the solution. The <i>download</i> link points to the release page of the solution.</p>
+        containing the solution. The <i>download</i> link points to the release page of the solution from where you can download the source code.</p>
 
     <h3>Virtual Socket</h3>
     <ol>
