--- a/links-to-solutions.html
+++ b/links-to-solutions.html
@@ -26,7 +26,8 @@
     <h2>Solutions</h2>
 
     <p>There are two links in front of each task description. The <i>examine</i> link points to the Github commit
-        containing the solution. The <i>download</i> link points to the release page of the solution from where you can download the source code.</p>
+        containing the solution. The <i>download</i> link points to the release page of the solution from where you can
+        download the source code.</p>
 
     <h3>Virtual Socket</h3>
     <ol>
@@ -41,6 +42,16 @@
                 href="https://github.com/hannesi/udp-rdt/releases/tag/virtual-socket-2" target="_blank">[Download]</a>
             (2p) Make a virtual socket that randomly drops a packet (i.e. does not pass it to UDP socket or to the
             application)</li>
+
+        <li><a href="https://github.com/hannesi/udp-rdt/tree/virtual-socket-3" target="_blank">[Examine]</a> <a
+                href="https://github.com/hannesi/udp-rdt/releases/tag/virtual-socket-3" target="_blank">[Download]</a>
+            (3p) Add to the virtual socket: randomly delays a packet, before passing it forward
+        </li>
+
+        <li><a href="https://github.com/hannesi/udp-rdt/tree/virtual-socket-4" target="_blank">[Examine]</a> <a
+                href="https://github.com/hannesi/udp-rdt/releases/tag/virtual-socket-4" target="_blank">[Download]</a>
+            (5p) Add to the virtual socket: randomly generates bit errors on the data of the packet, a single bit error is enough.
+        </li>
     </ol>
 </body>
 
