update solutions file

--- a/links-to-solutions.html
+++ b/links-to-solutions.html
@@ -50,7 +50,17 @@
 
         <li><a href="https://github.com/hannesi/udp-rdt/tree/virtual-socket-4" target="_blank">[Examine]</a> <a
                 href="https://github.com/hannesi/udp-rdt/releases/tag/virtual-socket-4" target="_blank">[Download]</a>
-            (5p) Add to the virtual socket: randomly generates bit errors on the data of the packet, a single bit error is enough.
+            (5p) Add to the virtual socket: randomly generates bit errors on the data of the packet, a single bit error
+            is enough.
+        </li>
+    </ol>
+
+    <h3>Positive and Negative ACKs</h3>
+    <ol>
+        <li><a href="https://github.com/hannesi/udp-rdt/tree/positive-and-negative-acks-1" target="_blank">[Examine]</a>
+            <a href="https://github.com/hannesi/udp-rdt/releases/tag/positive-and-negative-acks-1"
+                target="_blank">[Download]</a>
+            Add to your data packet some method for detecting at least a single bit error, e.g. CRC8.
         </li>
     </ol>
 </body>
